
2014-02-19 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-06
	* add support in GUI for (V)ESInputTag based on work from Sandro

2014-02-06 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-05
        * add functionality to execute java code to directly manipulate the config

2013-11-28 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-04
        * enable editing of path's prescales in upper-right panel (path view)

2013-08-01 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-03
	* update Oracle JDBC to version 12.1.0.1 for Java 6
	* migrate from org.jdesktop.layout.GroupLayout (Swing Layout) to javax.swing.GroupLayout (included in JDK 1.6+)

2013-07-19 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-02
	* roll back Oracle JDBC drivers to 10.2.0.2

2013-07-13 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-01
	* update Oracle JDBC to version 12.1.0.1 for Java 7

2013-07-04 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-00
	* rebuild for Java 7

2013-04-30 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-06-69
	* move functionality to sign jar files into ant build.xml

2013-04-30 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-06-68
	* set up a VIEW over ADG to access the WBM run summary
	* update BrowserConverter.java access WBM over ADG to map run numbers to HLT

2013-01-09 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-67
	* fix Java7 compilation problem (renaming a static method)

2012-05-10 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-06-66
	* remove non-alphanumeric characters from stream/dataset/path/sequence/module names

2012-05-03 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-64
	* fix isValueSet for vector parameters (essentially, always=true)
	* and avoid formatting crashes on size=0

2012-04-27 Ulf Behrens <ulf.behrens@cern.ch>
	* tag V01-06-63(b)
	* all public methods of ConfDB are synchronized now
	* addPSetForDatasets(), addPSetforStreams(): pset only added if not already existing
