@@ -1,4 +1,8 @@
 
+2014-02-20 Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V01-07-07
+	* add Fix bugs in (V)ESInputTag implementation
+
 2014-02-19 Martin Grunewald  <Martin.Grunewald@cern.ch>
 	* tag V01-07-06
 	* add support in GUI for (V)ESInputTag based on work from Sandro
